syntax = "proto3";

package proto;
option  optimize_for = CODE_SIZE;
option  go_package = "./;proto";

message CreateEventRequest{
    string SenderModule = 1;
    string ReceiverModule = 2;
    string Channel = 3;
}